--- a/textbox.css
+++ b/textbox.css
@@ -1,11 +1,7 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
 /*this css is only for textbox*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
+
 /* space div is common for all text box*/
 .space
 {
@@ -15,17 +11,19 @@
 
 .space input
 {
-    width: 100%;
+    width: 330px;
     padding: 10px;
     border: 1px solid rgba(255, 255, 255, 0.255);
     background: #1d2b3a;
     border-radius: 5px;
     outline: none;
     color: #fff;
-    font-size: 1cm;
+    font-size: 0.5cm;
     transition: o0.5s;
+    height: 80px;
+  }
 
-}
+
 .space span
 {
     position: absolute;
@@ -64,3 +62,96 @@
 {
     border: 1px solid #00dfc4;
 }
+
+
+
+
+
+
+.container{
+        background: #222;
+        color: #fff;
+        background-size: cover;
+        background-position: center;
+        max-width: 450px;
+        height: 100vh;
+        margin: auto;
+        position: relative;
+        margin-bottom: 13px;
+
+}
+h2{
+    color:white;
+    margin-bottom: 12px;
+
+}
+body{
+    background-color: #04132f;
+   font-family: 'Inter', sans-serif;
+    padding-bottom:100px;
+}
+.second{
+    
+ margin-right: 30px;
+ margin-left: 20%;
+}
+
+.space{
+    margin-bottom:30px;
+}
+.prevText{  /*this css manupulates space for the image which has to be uploade*/
+    position: absolute;
+    left: 50%;
+    bottom: 30%;
+    transform: translateX(-50%);
+    width: 90%;
+    text-shadow: 2px 2px 20px #000; 
+    }
+
+  .upload-icon{/* css for upload icon*/
+    position: absolute;
+    height: 60px;
+    bottom: 1px;
+    left: 90%;
+    transform: translateX(-50%);
+    cursor: pointer;
+    border-radius: 60px;
+    }
+    .con{
+        width:50%
+    }
+    .gi{/* outer most div for uploaded image 'gi' is the outermost div*/
+        display: flex;
+        flex-direction: row;
+        
+    }
+    .btn{
+        /*css for button*/
+        width:300px;
+        height:100px;
+        border:none;
+        color:white;
+        background-color:rgb(255,0,68);
+        border-radius:4px;
+        box-shadow:inset 0 0 0 0#f9e506;
+        transition:ease-out 0.15s;
+        font-size:2rem;
+        outline:none;
+        letter-spacing: 4px;
+        font-family:'Courier New', Courier, monospace;
+    
+
+    }
+    *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    font-family:'Source Sans Pro',sans-serif;
+    letter-spacing: 4px;
+}
+    .btn:hover{
+        box-shadow: inset 300px 000 #f9e506;
+        cursor:pointer;
+        color:#000;
+    }
